<resources>
    <string name="app_name">HabitTracker</string>
    <string name="user">User</string>
    <string name="to_do">To do</string>
    <string name="goals">Goals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Active">Active</string>
    <string name="Completed">Completed</string>
    <string name="Failed">Failed</string>
    <string name="goal_name">Goal Name</string>
    <string name="details">details</string>
    <string name="completedOutOf21"> %1$d/21 completed</string>
    <string name="the_step_to_be_done_today">The step to be done today</string>
    <string name="daily_step_not_done">daily step not done</string>
    <string name="daily_step_done">Daily step done</string>
    <string name="step">Step %1$d:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>