<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_beige"
    android:backgroundTint="@color/main_beige">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:foregroundTint="@color/pb_green"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/GoalNameTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/goal_name"
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/currentStepNumberTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/step" />


            <TextView
                android:id="@+id/currentStepTW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/the_step_to_be_done_today" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/doneIB"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:adjustViewBounds="false"
                    android:background="#00FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/daily_step_done"
                    android:cropToPadding="false"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:tint="@color/not_selected_gray"
                    app:srcCompat="@mipmap/done_gray"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/notDoneIB"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_margin="4dp"
                    android:background="#00786868"
                    android:clickable="true"
                    android:contentDescription="@string/daily_step_not_done"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:tint="@color/not_selected_gray"
                    app:srcCompat="@mipmap/not_done_gray"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/detailsTW"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="bottom|end"
                    android:minHeight="0dp"
                    android:paddingStart="4dp"
                    android:paddingTop="4dp"
                    android:paddingEnd="8dp"
                    android:paddingBottom="4dp"
                    android:text="@string/details"
                    android:textAlignment="textEnd"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>